# tonic-getting

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: grpc.rs  main.rs  pb.rs
