[package]
name = "tonic-getting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
prost = "0.13.3"
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
